6491-Notebook-after-review-and-testing-fixes - notebook item has show content buttons - notebook item shows overflowing content if closed - notebook editor focus on title input when opened - notebook showOpened items are saved to localstorage - content tab panel active tab is saved to localstorage - delete button contrast changes

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/notebook.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/notebook.scss
@@ -91,12 +91,15 @@
   }
 }
 
+.notebook__item-delete-container {
+  padding: 5px 0 10px;
+}
+
 .notebook__item-delete {
   align-items: center;
   background: lighten($color-fatal, 40%);
   display: flex;
   flex-flow: column nowrap;
-  margin: 5px 0 10px;
   padding: 10px;
 }
 
@@ -119,15 +122,14 @@
 .notebook__item-header {
   align-items: flex-start;
   display: flex;
-  flex-flow: column nowrap;
-  justify-content: flex-start;
+  justify-content: space-between;
+  margin: 0 0 10px;
 }
 
 .notebook__item-title {
   cursor: pointer;
   font-size: 0.8125rem;
   font-weight: 600;
-  margin: 0 0 10px;
 
   @include breakpoint($breakpoint-pad) {
     font-size: 0.9375rem;
@@ -138,8 +140,6 @@
   align-items: center;
   display: flex;
   justify-content: flex-end;
-  margin: 0 0 5px;
-  width: 100%;
 }
 
 .notebook__item-body {
